sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: Invalid literal number
    for(i <- 0to lgr-3){
             ^AlgGnomeSort:6: error: illegal start of simple expression
    for(i <- 0to lgr-3){
             ^AlgGnomeSort:14: error: ')' expected but '}' found.
  } 
  ^