sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var lgr = getNombreValeurs()
  var z = 0
  while(z<lgr){
    for(i <- 0to lgr-3){
    if(plusPetit(i+1,i+2)){
      z = z +1
    }else{
      echange(i+1,i+2)
      z = z-1
    }
  	}
  } 
}